[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/rocket.png" type="Texture" id=2]
[ext_resource path="res://assets/rocket1.png" type="Texture" id=3]
[ext_resource path="res://assets/rocket2.png" type="Texture" id=4]
[ext_resource path="res://assets/rocket_burn.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/rocket_thump.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/rocket_crash.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "burn",
"speed": 100.0
} ]

[node name="Player" type="RigidBody2D"]

input_pickable = false
collision_layer = 15
collision_mask = 15
mode = 0
mass = 10.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 3
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "default"
playing = true
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]

build_mode = 0
polygon = PoolVector2Array( -3.24759, 47.0195, 4.94199, 47.3019, 21.0388, 63.3987, 23.0156, 35.1588, 11.7196, 20.7564, 11.7196, -43.3484, 0.141205, -62.5515, -9.7428, -44.478, -10.0252, 20.7564, -21.0388, 35.4412, -21.3212, 63.6811 )

[node name="RocketBurnSound" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="RocketThumpSound" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="RocketCrashSound" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


